# BTC-5M-EMA-Stochastic

./: .env  pyproject.toml
hermes_trading/: __init__.py  loop.py  reflect.py  score.py
hermes_trading/adapters/: price.py
state/: goal.yaml  strategy.yaml
